# GameOfEverything

./: .gitignore  README.md
game_of_everything/: AGENT.md  CLAUDE.md  README.md  goe.toml.example  pyproject.toml
game_of_everything/atoms/: bash_history_leak.md  cms_default_creds.md  create_user.md  cron_job_hijack.md  database_expose.md  exposed_env_vars.md  ftp_anon_upload.md  insecure_git_repo.md  install_package.md  mongodb_disable_auth.md  motd_command_injection.md  phpmyadmin_disable_auth.md  postgres_rce.md  python_path_hijack.md  redis_disable_auth.md  redis_replication_leak.md  samba_insecure_share.md  sensitive_file.md  set_capability.md  set_suid.md  sudoers_no_passwd.md  weak_service_password.md  writable_systemd_service.md
game_of_everything/atoms/web_vulnerabilities/: cmd_injection.md  file_upload_bypass.md  insecure_deserialization.md  jwt_weak_secret.md  path_traversal_lfi.md  sqli_blind.md  sqli_tautology.md  sqli_union.md  ssti_jinja2.md  toctou_race_condition.md  xss_admin_bot.md  xss_reflected.md  xss_stored.md
game_of_everything/docker/attacker/: Dockerfile
game_of_everything/docker/browser/: Dockerfile
game_of_everything/docker/preset_target/: Dockerfile
game_of_everything/docker/target_express/: Dockerfile
game_of_everything/docker/target_flask/: Dockerfile
game_of_everything/docker/target_php/: Dockerfile
game_of_everything/docs/: browser_use.md  multi_box_design.md  phase1_complete.md  phase2_bedrock_tool_blocker.md  phase2_implementation_summary.md  phase2_status.md  preset_apps_plan.md
game_of_everything/docs/rewrite/: entity_graph_model.md  goe_rewrite.md  implementation_plan.md
game_of_everything/goe/: __init__.py  config.py
game_of_everything/goe/container/: __init__.py  environment.py
game_of_everything/goe/executor/: __init__.py  assertions.py  interpolation.py  outputs.py  runner.py  sessions.py
game_of_everything/goe/models/: __init__.py  artifacts.py  edge.py  entity.py  (+3 more)
game_of_everything/output/: 20260327_010811_deploy.sh  20260328_160208_deploy.sh  20260328_162643_deploy.sh  20260328_171311_deploy.sh  20260328_175229_deploy.sh  20260412_180333_deploy.sh  20260412_183231_deploy.sh  20260412_190103_deploy.sh  20260413_190635_deploy.sh  20260413_192050_deploy.sh
game_of_everything/scripts/: bedrock_access.py  query.py  rag_gen.py  test_browser_phase1.py  test_custom_app.py
game_of_everything/terraform/: main.tf  outputs.tf  terraform.tfvars.tpl  variables.tf
game_of_everything/tests/: conftest.py  test_container.py  test_executor.py  test_models.py
(+98 files in other folders)
