[project]
name = "game_of_everything"
version = "0.1.0"
description = "game_of_everything using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11,<3.14"
dependencies = [
    "crewai[bedrock,tools]==1.9.3",
    "langchain-aws>=1.1.0",
    "docker>=7.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "playwright>=1.40.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
]

[project.scripts]
kickoff = "game_of_everything.main:kickoff"
run_crew = "game_of_everything.main:kickoff"
plot = "game_of_everything.main:plot"
goe-destroy = "game_of_everything.main:destroy"
goe-deploy = "game_of_everything.main:deploy_from_output"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/game_of_everything", "goe"]

[tool.pytest.ini_options]
markers = [
    "docker: tests that require a running Docker daemon",
]

[tool.crewai]
type = "flow"
